Bug 1374414 - Stop warning if target is null in idle dispatch. r=froydnj