xpcom/threads/nsThreadUtils.cpp
@@ -373,7 +373,9 @@ NS_IdleDispatchToThread(already_AddRefed<nsIRunnable>&& aEvent,
 
   //XXX Using current thread for now as the nsIEventTarget.
   nsIEventTarget* target = mozilla::GetCurrentThreadEventTarget();
-  NS_ENSURE_STATE(target);
+  if (!target) {
+    return NS_ERROR_UNEXPECTED;
+  }
 
   nsCOMPtr<nsIIdleRunnable> idleEvent = do_QueryInterface(event);
 
